--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "background_color": "#000",
     "display": "standalone",
     "orientation": "portrait",
-    "start_url": "./index.html",
+    "start_url": "/index.html",
     "icons": [
         {
             "src": "icons/icon-72x72.png",
